@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "astrapy"
-version = "1.4.0"
+version = "1.4.1"
 description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
 authors = [
     "Stefano Lottini <stefano.lottini@datastax.com>",
